# maestro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.maestro/: AGENTS.md  board.md  plan.json
design/: icon-src.html  logo-concepts.html  m-variants.html  maestro-logo.html  maestro-ops-A.html  maestro-ops-B.html  maestro-ops-C.html
design/diff-mockups/opt1-github-pro/: index.html
design/diff-mockups/opt2-linear-minimal/: index.html
design/diff-mockups/opt3-editor-inline/: index.html
design/diff-mockups/opt4-cinematic/: index.html
design/diff-mockups/opt5-mission-control/: index.html
docs/: RELEASING.md
docs/superpowers/plans/: 2026-06-04-m0-skateboard.md  2026-06-05-cli-crew-spawn.md  2026-06-05-tabbed-workspaces.md  2026-06-06-ai-code-diff-review-slice1.md  2026-06-06-git-worktree-isolation.md  2026-06-26-folder-sidebar-code-panel.md  2026-06-27-agent-orchestrator.md  2026-07-03-maestro-mcp.md  2026-07-10-board-agent-loop.md  2026-07-21-maestro-canvas-p1.md
docs/superpowers/specs/: 2026-06-04-maestro-multi-agent-cli-orchestrator-design.md  2026-06-05-cli-crew-spawn-design.md  2026-06-05-intro-animation-design.md  2026-06-05-tabbed-workspaces-design.md  2026-06-06-ai-code-diff-review-design.md  2026-06-06-git-worktree-isolation-design.md  2026-06-06-hide-to-tray-design.md  2026-06-06-resource-governor-design.md  2026-06-10-tab-reorder-rename-detach-design.md  2026-06-26-folder-sidebar-code-panel-design.md  2026-06-27-agent-orchestrator-design.md  2026-07-03-maestro-mcp-design.md  2026-07-10-board-agent-loop-design.md  2026-07-21-maestro-canvas-redesign.md
mcp/: README.md  package-lock.json  package.json
mcp/src/: board.test.ts  board.ts  fleet.test.ts  fleet.ts  git.ts  index.ts  ops.test.ts  ops.ts  server.ts
mcp/test/: board.test.ts  git.test.ts  lists.test.ts  ops.test.ts  server.test.ts
orchestrator/: README.md  __main__.py  cli_agents.py  config.py  errors.py  executor.py  graph.py  prompts.py  state.py  worktree.py
prototype/: index.html  style.css
src/: agentbridge.ts  aicode.ts  appstate.ts  background.ts  board.test.ts  board.ts  boardfile.test.ts  boardfile.ts  bridges.ts  broadcast.ts  canvas.test.ts  canvas.ts  codepanel.test.ts  codepanel.ts  conductor.test.ts  conductor.ts  confirmmodal.ts  crew.test.ts  crew.ts  dashboard.ts  delegation.ts  diff.test.ts  diff.ts  diffview.ts  dispatch.test.ts  dispatch.ts  dock.ts  dockstore.ts  editor.ts  filetree.test.ts  filetree.ts  fleet.test.ts  fleet.ts  fleetbridge.test.ts  fleetbridge.ts  hint.ts  ipc.test.ts  ipc.ts  kanban.test.ts  kanban.ts  (+47 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dashboard.html  dashboard.rs  error.rs  lib.rs  main.rs  review.rs  state.rs  worktree.rs
src-tauri/src/core/: agent.rs  command_spec.rs  fs.rs  job.rs  mod.rs  pty_session.rs  registry.rs  screenshot.rs  supervisor.rs  watch.rs
src-tauri/tests/: job_tree.rs  pty_attach.rs  pty_io.rs  registry.rs  supervisor.rs
src/styles/: aicode.css  broadcast.css  canvas.css  dock.css  editor.css  filetree.css  fleet.css  home.css  index.css  modal.css  panels.css  sidebar.css  splash.css  titlebar.css  tokens.css  updater.css  wizard.css  workspace.css
tests/: fake_cli.py  test_agent_failed.py  test_cli_agents.py  test_config.py  test_errors.py  test_executor.py  test_graph.py  test_logging.py  test_main.py  test_prompts.py  test_rescout.py  test_route.py  test_worktree.py
tools/: probe6.py  sprite_pack.py  sprite_preview.py  sprite_slicer.py
(+2 files in other folders)
