[project]
name = "maestro-orchestrator"
version = "0.1.0"
description = "Scout/Builder/Reviewer agent loop over AI CLIs"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "pyyaml>=6",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
orchestrator = "orchestrator.__main__:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*"]
