[package]
name = "maestro"
version = "0.1.0"
description = "Maestro multi-agent CLI orchestrator"
authors = ["whalelo"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
portable-pty = "0.9.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serial_test = "3"
portable-pty = "0.9.0"
tempfile = "3"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
