[package]
name = "maestro"
version = "0.3.9"
description = "Maestro multi-agent CLI orchestrator"
authors = ["tdat-dev"]
license = "MIT"
repository = "https://github.com/tdat-dev/maestro"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
portable-pty = "0.9.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
png = "0.17"
tiny_http = "0.12"
base64 = "0.22"

[dev-dependencies]
serial_test = "3"
portable-pty = "0.9.0"
tempfile = "3"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
